--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8 text-center">
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
-            <p>&copy; 2025 [Your Name Here]. All rights reserved. | Built with Salesforce Admin Power</p>
+            <p>&copy; 2025 [Michael Ajose]. All rights reserved. | Built with Salesforce Admin Power</p>
         </div>
     </footer>
 
