--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <section class="hero-section">
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
             <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold mb-4">
-                [Michael Here]
+                [Michael Ajose]
             </h1>
             <p class="text-xl sm:text-2xl font-light mb-6">
                 Certified Salesforce Administrator | Driving CRM Success & Innovation
