--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
     <!-- Hero Section -->
     <section class="hero-section">
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
+            <!-- Profile Picture -->
+            <img src="https://placehold.co/150x150/FFFFFF/4A90E2?text=Your+Photo" alt="Your Profile Picture" class="rounded-full mx-auto mb-6 shadow-lg border-4 border-white">
             <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold mb-4">
-                Michael Ajose
+                [Your Name Here]
             </h1>
             <p class="text-xl sm:text-2xl font-light mb-6">
                 Certified Salesforce Administrator | Driving CRM Success & Innovation
@@ -304,7 +306,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8 text-center">
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
-            <p>&copy; 2025 [Michael Ajose]. All rights reserved. | Built with Salesforce Admin Power</p>
+            <p>&copy; 2025 Michael Ajose. All rights reserved. | Built with Salesforce Admin Power</p>
         </div>
     </footer>
 
